fixed a few things most goals working

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,7 @@
     <title>{% block title %}{% endblock title %}</title>
   </head>
   <body>
-    <header>
-      <div class="container">
-        <h1><a href="/">Freeshelf</a></h1>
-      </div>
-    </header>
+    <h1>Freeshelf</h1> 
     <div class="container">
         <div class="flex-grow">
             <div class="primary">
