most things working

--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<a href="{% url 'auth_logout' %}" class="">Logout</a>
+<a href="{% url 'auth_logout' %}" class="Logout">Logout</a>
     {% for book in books %}
         <div>
             <p>{{ book.title}}</p>
             <p>{{ book.author}}</p>
-            <p><a href="{{book.url}}">{{ book.url}}</a></p>
+            <p><a href="{{book.url}}">{{book.url}}</a></p>
             <p>{{book.description}}</p>
             <ul>
                 {% for category in books.category.all %}
